<resources>
    <string name="app_name">Trip</string>
    <string name="trip_reminder"> Trip Reminder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_account_signup">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add">Add</string>
    <string name="trip_name">Trip Name</string>
    <string name="start_point">Start Point</string>
    <string name="end_point">End Point</string>
    <string name="trip_details">Trip Details</string>
    <string name="add_note">Add Note</string>
    <string name="api_key">AIzaSyDyoW1ZsexD4TAGKPrJDftbt_ESfZ7CZKM</string>
    <string name="remove">remove</string>
    <string name="note2">notes</string>
    <string name="typeLbl">type</string>
    <string name="fromLbl">from</string>
    <string name="toLbl">to</string>
    <string name="timeLbl">time</string>
    <string name="startBtn">start</string>
</resources>