<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="58dp"
        android:background="@color/white"
        android:elevation="3dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/don_t_have_account_signup"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </androidx.appcompat.widget.Toolbar>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#B5748A"
        android:layout_below="@id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="70dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="10dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                app:boxBackgroundMode="filled"
                app:startIconDrawable="@drawable/ic_user_login">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:textColorHint="@color/white"
                    android:background="@android:color/transparent"
                    android:hint="@string/user_name"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/userLayout"
                android:padding="20dp"
                app:boxBackgroundMode="filled"
                app:startIconDrawable="@drawable/ic_baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etPasswordLayout"
                android:padding="20dp"
                app:passwordToggleEnabled="true"
                app:boxBackgroundMode="filled"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmpass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/confirm_password"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailLayout"
                android:layoutDirection="inherit"
                android:padding="20dp"
                app:boxBackgroundMode="filled"
                app:passwordToggleEnabled="true"
                app:counterMaxLength="6"
                app:counterEnabled="true"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUpBtn"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:layout_below="@+id/confirmpassword"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="19dp"
                android:background="@drawable/login_frame"
                android:foreground="?selectableItemBackground"
                android:text="@string/don_t_have_account_signup"
                android:textColor="@color/white"
                android:textSize="19sp" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>