<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:text="@string/login"
        android:textColor="@color/purple_700"
        android:textSize="34dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView2"
        android:src="@drawable/login"
        android:layout_height="120dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_below="@id/imageView2"
        app:cardBackgroundColor="@color/white"
        android:layout_centerInParent="true"
        android:layout_marginTop="60dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emaillayoutSignIn"
                app:startIconDrawable="@drawable/ic_user_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:backgroundTint="#4D5DB8"
                    android:textColorHint="@color/black"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passLayoutSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emaillayoutSignIn"
                android:padding="12dp"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:backgroundTint="#4D5DB8"
                    android:hint="@string/password"
                    android:textColorHint="@color/purple_700" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button3"
                android:layout_width="310dp"
                android:layout_height="60dp"
                android:layout_below="@+id/passLayoutSignIn"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:backgroundTint="#4D5DB8"
                android:elevation="4dp"
                android:text="Sign In" />


            <Button
                android:id="@+id/button4"
                android:layout_width="310dp"
                android:layout_height="60dp"
                android:layout_below="@+id/button3"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="2dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:backgroundTint="#4D5DB8"
                android:elevation="4dp"
                android:text="@string/don_t_have_account_signup"
                android:textAllCaps="false"
                android:textSize="16.5sp" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/googleSignIn"
                android:layout_width="match_parent"
                android:layout_margin="4dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/button4"
                android:backgroundTint="#3447B1"
                android:layout_marginBottom="10dp"
                app:buttonSize="wide"
                app:colorScheme="dark">
            </com.google.android.gms.common.SignInButton>




        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>