<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpcomingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            style="@style/TextAppearance.Compat.Notification.Info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FAFAFA">

                <TextView
                    android:id="@+id/timeLbl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="20dp"
                    android:text=""

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/titleLbl" />

                <TextView
                    android:id="@+id/typeLbl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text=""

                    app:layout_constraintEnd_toEndOf="@+id/timeLbl"
                    app:layout_constraintStart_toStartOf="@+id/timeLbl"
                    app:layout_constraintTop_toBottomOf="@+id/timeLbl" />

                <TextView
                    android:id="@+id/toLbl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text=""

                    app:layout_constraintEnd_toEndOf="@+id/fromLbl"
                    app:layout_constraintStart_toStartOf="@+id/fromLbl"
                    app:layout_constraintTop_toBottomOf="@+id/fromLbl" />

                <TextView
                    android:id="@+id/fromLbl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text=""

                    app:layout_constraintEnd_toEndOf="@+id/typeLbl"
                    app:layout_constraintStart_toStartOf="@+id/typeLbl"
                    app:layout_constraintTop_toBottomOf="@+id/typeLbl" />

                <TextView
                    android:id="@+id/titleLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"

                    android:text="TextView"

                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/timeLbl"

                    app:layout_constraintBottom_toBottomOf="@+id/timeLbl"
                    app:layout_constraintStart_toStartOf="@+id/titleLbl"
                    app:layout_constraintTop_toTopOf="@+id/timeLbl" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="44dp"

                    android:text="@string/toLbl"

                    app:layout_constraintBottom_toBottomOf="@+id/toLbl"
                    app:layout_constraintEnd_toStartOf="@+id/toLbl"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    app:layout_constraintTop_toTopOf="@+id/toLbl" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="27dp"

                    android:text="@string/fromLbl"

                    app:layout_constraintBottom_toBottomOf="@+id/fromLbl"
                    app:layout_constraintEnd_toStartOf="@+id/fromLbl"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    app:layout_constraintTop_toTopOf="@+id/fromLbl" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="29dp"

                    android:text="@string/typeLbl"

                    app:layout_constraintBottom_toBottomOf="@+id/typeLbl"
                    app:layout_constraintEnd_toStartOf="@+id/typeLbl"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/typeLbl" />

                <Button
                    android:id="@+id/menuBtn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/menu"

                    app:layout_constraintBottom_toBottomOf="@+id/titleLbl"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/titleLbl"
                    app:layout_constraintVertical_bias="1.0"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/startBtn"
                    android:layout_width="76dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/submit_btn"
                    android:freezesText="true"
                    android:text="@string/startBtn"
                    android:textAlignment="center"

                    android:textSize="12sp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/toLbl"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/notesBtn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="80dp"
                    android:background="@drawable/note"

                    app:layout_constraintBottom_toBottomOf="@+id/startBtn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/startBtn"
                    app:layout_constraintTop_toTopOf="@+id/startBtn"
                    app:layout_constraintVertical_bias="0.0"
                    tools:ignore="SpeakableTextPresentCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>